Connect UI with application